--- a/source/Components/Tracker/styles.m.css
+++ b/source/Components/Tracker/styles.m.css
@@ -1,11 +1,17 @@
 .tracker {
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    padding: 0 15px;
 
     & form {
         width: 100%;
         position: relative;
+    }
+
+    & section {
+        &:nth-child(1) {
+            padding: 0 15px;
+        }
     }
 
     & input {
@@ -16,6 +22,7 @@
         border-radius: 75px;
         padding: 17px 21px;
         width: 100%;
+        margin-bottom: 26px;
     }
 
     & .submitButton {
